--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
   <div id="dark-mode-screen-extension" style="width: 100%; height: 100%; position: fixed; top: 0px; left: 0px; background-color: 
     rgba(36, 34, 33, 0.4); z-index: 2147483647; pointer-events: none;">
   </div>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "93279a5956d64f4fa013bb48a5e367a2"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
