--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="My personal portfolio."
-            content="Front-end developer portfolio"
+            content="Web developer portfolio"
         />
         <link rel="apple-touch-icon" href="./porticon.png" />
         <link
