--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="../src/static/favicon.png" />
+        <link rel="icon" href="./favicon.ico" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta
             name="description"
@@ -15,7 +15,7 @@
             name="My personal portfolio."
             content="Web developer portfolio"
         />
-        <link rel="apple-touch-icon" href="./porticon.png" />
+        <link rel="apple-touch-icon" href="./favicon.ico" />
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap"
             rel="stylesheet"
