--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-lightBg">
+<html lang="en" class="bg-light-bg">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
